# openenv-data-cleaning

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  __init__.py  client.py  data.py  inference.py  local_validate.py  models.py  openenv.yaml  openenv_extended.yaml  pyproject.toml  quick_test.py  requirements.txt  scenario_config.json  test_deployed.py  test_env.py  validate.py
client_notebooks/: evaluation.py
scenarios/: task1_identify.json  task2_classify.json  task3_fix.json  task4_insight.json
server/: Dockerfile  __init__.py  app.py  environment.py  main.py  web_ui.py
tests/: test_environment.py
