[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-data-cleaning"
version = "1.0.0"
description = "OpenEnv environment for training AI agents on data quality assessment"
readme = "README.md"
license = {text = "BSD-3-Clause"}
requires-python = ">=3.10"
authors = [
    {name = "Shaikh Akram", email = "shaikhakramshakil@gmail.com"},
]
keywords = ["openenv", "data-cleaning", "ai-agent", "reinforcement-learning", "data-quality"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: BSD License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
    "pydantic>=2.0.0",
    "aiohttp>=3.9.0",
    "openai>=1.0.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces/shaikhakramshakil/openenv-data-cleaning"
Repository = "https://huggingface.co/spaces/shaikhakramshakil/openenv-data-cleaning"

[tool.setuptools.packages.find]
where = ["."]
